--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.7.*"
+        "illuminate/support": "~5.6"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
