--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.6.*|5.7.*"
+        "illuminate/support": "5.6.*|5.7.*",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
