--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
     pull_request:
-        types: [ opened, ready_for_review, reopened ]
+        types: [ opened, synchronize, ready_for_review, reopened ]
 
 jobs:
     ###
