--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "ci:coverage": "php -dpcov.enabled=1 -dpcov.directory=./vendor/bin/phpunit --coverage-php phpunit-reports/phpunit.coverage.xml"
     },
     "config": {
         "sort-packages": true
