--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.projectName=Laravel Validation Rules Package
 
 sonar.sources=src
 sonar.tests=tests
+
+sonar.php.coverage.reportPaths=/github/workspace/phpunit-reports/phpunit.coverage.xml
