--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "ci:coverage": "php -dpcov.enabled=1 -dpcov.directory=src ./vendor/bin/phpunit --coverage-php phpunit-reports/phpunit.coverage.xml"
+        "ci:coverage": "php -dpcov.enabled=1 -dpcov.directory=src ./vendor/bin/phpunit --coverage-clover phpunit-reports/phpunit.coverage.xml"
     },
     "config": {
         "sort-packages": true
