chore: ci coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,10 +55,13 @@ jobs:
 
             - name: Get PHP coverage report paths
               id: coverage
-              run: sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace@g' phpunit-reports/phpunit.coverage.xml
+              run: echo "reportPaths=$(find "$PWD/phpunit-reports" -type f | xargs echo | sed 's@'$GITHUB_WORKSPACE'@/github/workspace@g' | sed 's/ /,/g')" >> $GITHUB_OUTPUT
 
             - name: Analyze with SonarCloud
               uses: sonarsource/sonarcloud-github-action@master
+              with:
+                  args: >
+                      -Dsonar.php.coverage.reportPaths=${{ steps.coverage.outputs.reportPaths }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
