--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,9 @@ jobs:
 
             -   run: composer ci:coverage
 
-            -   name: Fix PHPUnit code paths
-                run: |
-                    sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace@g' phpunit-reports/phpunit.coverage.xml
+            -   name: Fix coverage report paths
+                id: coverage
+                run: sed -i 's@'$GITHUB_WORKSPACE'@/github/workspace@g' phpunit-reports/phpunit.coverage.xml
 
             -   name: Store test results and coverage report
                 uses: actions/upload-artifact@v3
